<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin"

    tools:context=".UserLoginActivity">

    <TextView
        android:id="@+id/userLogin_app_name_id"
        style="@style/defaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/userLogin_title_id"
        style="@style/userLoginTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/userLogin_title" />

    <TextView
        android:id="@+id/userLogin_subtitle_id"
        style="@style/userLogin_subTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userLogin_title_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/userLogin_subTitle" />

    <EditText
        android:id="@+id/userLogin_email_input_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userLogin_subtitle_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="19"
        android:hint="@string/userLogin_email_input"
        android:inputType="textEmailAddress"
        android:autofillHints="email"
        android:shadowDx="@integer/material_motion_duration_long_1" />

    <EditText
        android:id="@+id/userLogin_password_input_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userLogin_email_input_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="19"
        android:hint="@string/userLogin_password_input"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:shadowDx="@integer/material_motion_duration_long_1" />

    <Button
        android:id="@+id/userLogin_btn_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userLogin_password_input_id"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/black"
        android:onClick="onLogin"
        android:shadowRadius="@integer/material_motion_duration_long_1"
        android:text="@string/login" />

    <Button
        android:id="@+id/userLogin_createAccount_btn_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userLogin_btn_id"
        android:layout_marginTop="120dp"
        android:backgroundTint="@color/white"
        android:onClick="onCreateAccount"
        android:shadowRadius="@integer/material_motion_duration_long_1"
        android:text="@string/create_account"
        android:textColor="@color/black" />


</RelativeLayout>