<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin"
    tools:context=".UserCreateAccountActivity">

    <TextView
        android:id="@+id/userCreateAccount_app_name_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/defaultTextStyle"/>

    <TextView
        android:id="@+id/userCreateAccount_title_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userCreateAccount_app_name_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/userLogin_createNewAccount_txt"
        style="@style/userLoginTitleStyle"/>

    <EditText
        android:id="@+id/userCreateAccount_name_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userCreateAccount_title_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="15"
        android:hint="@string/userCreateAccount_user_name"
        android:inputType="textPersonName"
        android:shadowDx="@integer/material_motion_duration_long_1" />

    <EditText
        android:id="@+id/userCreateAccount_email_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userCreateAccount_name_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="15"
        android:hint="@string/userCreate_emailAccount_input"
        android:inputType="textEmailAddress"
        android:shadowDx="@integer/material_motion_duration_long_1" />

    <EditText
        android:id="@+id/userCreateAccount_password_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userCreateAccount_email_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="15"
        android:hint="@string/userCreate_passwordAccount_input"
        android:inputType="textPassword"
        android:shadowDx="@integer/material_motion_duration_long_1" />

    <EditText
        android:id="@+id/userCreateAccount_confirm_password_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userCreateAccount_password_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="15"
        android:hint="@string/userCreate_passwordAccount_input"
        android:inputType="textPassword"
        android:shadowDx="@integer/material_motion_duration_long_1" />



    <Button
        android:id="@+id/userLogin_btn_create_account_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userCreateAccount_confirm_password_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/black"
        android:ems="20"
        android:shadowRadius="@integer/material_motion_duration_long_1"
        android:text="@string/userCreate_Account_title" />




</RelativeLayout>