<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin"
    android:padding="@dimen/default_margin"
    tools:context=".ItemDetailsActivity">

    <TextView
        android:id="@+id/app_name_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />
    <TextView
        android:id="@+id/item_details_page_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name_id"
        android:text="@string/item_detailsPage_title"
        style="@style/pageTitleTextStyle"
        android:layout_marginTop="@dimen/default_margin"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/image_cardView_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        android:layout_below="@+id/item_details_page_id">

        <ImageView
            android:id="@+id/item_image_id"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_below="@+id/item_details_page_id"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/item_name_id"
        style="@style/pageTitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_cardView_id"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/item_detailsPage_item_name" />

    <ImageView
        android:id="@+id/unlike_id"
        style="@style/itemPriceBigFont"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/image_cardView_id"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_star_unlike" />

    <TextView
        android:id="@+id/item_price_id"
        style="@style/itemPriceBigFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_name_id"
        android:layout_marginTop="10dp"
        android:text="@string/homePage_item_price" />

    <TextView
        android:id="@+id/item_description_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_price_id"
        android:layout_marginTop="@dimen/default_margin" />

    <Button
        android:id="@+id/contact_seller_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_description_id"
        android:backgroundTint="@color/black"
        android:text="Contact the seller" />

    <Button
        android:id="@+id/share_item_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:layout_below="@id/contact_seller_id"
        android:layout_marginTop="@dimen/default_margin"
        android:text="Share"
        />

    <ImageView
        android:id="@+id/close_id"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="300dp"
        android:src="@drawable/ic_baseline_close_24"
        app:tint="@color/black" />




</RelativeLayout>