<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="69dp"
        android:layout_height="69dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/item_image_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/iphone" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/item_name_id"
        style="@style/itemSmallNameStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/homePage_item_name"
        app:layout_constraintEnd_toStartOf="@+id/item_price_id"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <TextView
        android:id="@+id/item_price_id"
        style="@style/itemSmallPriceStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:text="@string/homePage_item_price"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/item_name_id"
        app:layout_constraintEnd_toStartOf="@+id/unlike_id"
        app:layout_constraintTop_toTopOf="@+id/item_name_id"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/item_description_id"
        style="@style/itemSmallDescStyle"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:ems="18"
        android:text="@string/item_detailsPage_item_description"
        android:textScaleX="0.8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/item_price_id"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/item_name_id"
        app:layout_constraintTop_toBottomOf="@+id/item_name_id"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/unlike_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_star_unlike_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>